<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    <EditText
        android:id= "@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <EditText
            android:id= "@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id = "@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/button_add"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="5dp"/>
    <Button
        android:id = "@+id/button_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButRead"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    <Button
        android:id = "@+id/button_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButClean"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
</LinearLayout>
<TextView
    android:id = "@+id/text_end"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"/>
</LinearLayout>